0.7.2/workflows/statistical-training/index.md
# Statistical Training

Fit a cuvis-ai pipeline using `StatisticalTrainer` — accumulate background moments (mean, covariance, histograms) during a single pass over the data, no gradient steps.

## Goal

Produce a saved, ready-to-run pipeline whose statistical nodes have been initialised from data. The resulting pipeline can be replayed with [`restore-pipeline`](https://docs.cuvis.ai/0.7.2/workflows/restore-pipeline/index.md).

## Prerequisites

- A pipeline with at least one [statistical node](https://docs.cuvis.ai/0.7.2/catalogs/nodes/#category=model) (RX, PCA, NormalizeFromStats, …).
- A datamodule that produces unlabelled training data (typically `SingleCu3sDataModule` or `MultiCu3sDataModule`).
- The [Concepts → Training](https://docs.cuvis.ai/0.7.2/concepts/training/index.md) page if you want the model behind the trainer.

## Recipe

```python
from cuvis_ai_core.trainer import StatisticalTrainer
from cuvis_ai_core.pipeline import Pipeline
from cuvis_ai_core.data.datamodule import SingleCu3sDataModule

pipeline = Pipeline.from_yaml("configs/pipeline/anomaly/rx/rx_statistical.yaml")
datamodule = SingleCu3sDataModule(cu3s_file_path="data/Lentils/Demo_000.cu3s")

trainer = StatisticalTrainer()
trainer.fit(pipeline=pipeline, datamodule=datamodule)

pipeline.save("artifacts/rx_statistical_fitted.yaml")
```

## What happens under the hood

1. Trainer collects every node whose `execution_stages` includes `STATISTICAL`.
1. For each batch, it calls `statistical_initialization(batch)` on every collected node.
1. After the pass, each node finalises its accumulated stats (covariance inversion, normalisation, etc.).
1. The fitted pipeline is saved as a YAML with `TRAINABLE_BUFFERS` populated.

## Common variations

- **Inference only on the trained pipeline**: skip authoring a fresh YAML — run [`restore-pipeline --pipeline-path artifacts/rx_statistical_fitted.yaml --cu3s-file-path …`](https://docs.cuvis.ai/0.7.2/workflows/restore-pipeline/index.md).
- **Statistical phase as part of two-phase training**: pair with [`GradientTrainer`](https://docs.cuvis.ai/0.7.2/workflows/gradient-training/index.md) — the statistical phase initialises weights for the gradient phase. See [Concepts → Training](https://docs.cuvis.ai/0.7.2/concepts/training/index.md).
- **Multi-cube training**: swap `SingleCu3sDataModule` for `MultiCu3sDataModule` and point it at a directory.

## Related

- [Concepts → Execution stages](https://docs.cuvis.ai/0.7.2/concepts/execution-stages/index.md) — which nodes run when.
- [Build Pipeline (YAML)](https://docs.cuvis.ai/0.7.2/workflows/build-pipeline-yaml/index.md) — author the pipeline this trainer fits.
- [Gradient Training](https://docs.cuvis.ai/0.7.2/workflows/gradient-training/index.md) — the next phase if your pipeline has trainable parameters.
